# azure-iot-sdks

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.dmpreview.md  CHANGELOG.md  CONTRIBUTING.md  contribute.md  dmpatterns.md  index.html  readme.md  thirdpartynotice.txt
c/: CMakeLists.txt  dependencies-test.cmake  dependencies.cmake  readme.md
c/api_reference/: agenttime_8h.html  agenttime_8h_source.html  annotated.html  base64_8h.html  base64_8h_source.html  classes.html  dir_12d2b36f129c41023f7f4a6bff2578c5.html  dir_1784a01aa976a8c78ef5dfc3737bcac8.html  dir_3fa79a50e591a13d34768ad07721929e.html  dir_4512fd3943e6edf693cef6803bd9b15b.html  dir_4d022b97b825a6486a754f89a7f5e400.html  dir_61a9c8b11d2290811efc64f9f8aab03f.html  dir_72aec881c4ddd8f448eae7bd490815ae.html  dir_cdcbff5a6a1122bd9bb23b5044523779.html  dir_d828e6b88ae878aca874d11d8e156263.html  dir_e7e6b493d3d7754f3ea1acccc5db86e9.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  httpapi_8h.html  httpapi_8h_source.html  httpapiex_8h.html  httpapiex_8h_source.html  httpheaders_8h.html  httpheaders_8h_source.html  index.html  iothub__client_8h.html  iothub__client_8h_source.html  iothub__client__ll_8h.html  iothub__client__ll_8h_source.html  iothub__message_8h.html  iothub__message_8h_source.html  lock_8h.html  lock_8h_source.html  (+11 more)
c/api_reference/search/: all_2.js  all_6.js  all_8.js  all_a.js  all_b.js  classes_0.js  defines_1.js  defines_4.js  enums_2.js  files_0.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  search.css  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_2.js
c/blob/: CMakeLists.txt
c/blob/devdoc/: blob_requirements.md
c/blob/inc/: blob.h
c/blob/src/: blob.c
c/blob/tests/: CMakeLists.txt
c/build_all/arduino/: CMakeList.append  Makefile  Makefile.azure  Makefile.iot  Makefile.proton  build.sh  build_paho_arduino.sh  build_proton.sh  setup.sh  setup_arduino.sh  setup_arduino_target.sh  setup_proton_arduino.sh  setup_sdk.sh
c/build_all/arduino_cc/: PrintTestsLst.cmd  PushToMaster.ps1  Tests.lst  Tests_Huzzah.lst  Tests_M0WiFi.lst  Tests_Thingdev.lst  build.cmd  download_blob.cmd  execute.ps1  make_sdk.cmd
c/build_all/linux/: build.sh  build_proton.sh  print_failed_tests.sed  setup.sh  setup_opensuse.sh
c/build_all/mbed/: build.cmd  build_proton.cmd
c/build_all/opensuse/: build_paho.sh  build_proton.sh  remove_proton.sh  setup.sh
c/build_all/tirtos/: Makefile  azureiot.bld  products.mak
c/build_all/windows/: NuGet.Config  build.cmd  build_client.cmd  build_paho.cmd  build_proton.cmd
c/build_all/windowsce/: build.cmd
c/certs/: certs.c
c/common/: CMakeLists.txt  readme.txt
c/common/adapters/: agenttime.c  agenttime_mbed.c  httpapi_curl.c  httpapi_mbed.cpp  httpapi_tirtos.c  httpapi_wince.cpp  httpapi_winhttp.c  httpapi_wininet.c  lock_c11.c  lock_pthreads.c  lock_rtx_mbed.cpp  lock_win32.c  threadapi_c11.c  threadapi_pthreads.c  threadapi_rtx_mbed.cpp  threadapi_win32.c  wolfssl_connection.cpp
c/common/devdoc/: agenttime_requirements.docm  base64_requirements.docm  buffer_requirements.docm  crt_abstractions_requirements.docm  doublylinkedlist_requirements.docm  gballoc_requirements.docm  httpapiex_requirements.docm  httpapiexsas.docm  httpheaders requirements.docm  lock_requirements.docm  map_requirements.docm  sastoken.docm  string_tokenizer_requirements.docm  strings_requirements.docm  url_encode_requirements.docm
c/common/inc/: agenttime.h  base64.h  buffer_.h  crt_abstractions.h  doublylinkedlist.h  gballoc.h  hmac.h  hmacsha256.h  httpapi.h  httpapiex.h  httpapiexsas.h  httpheaders.h  iot_logging.h  lock.h  macro_utils.h  map.h  mqttapi.h  sastoken.h  string_tokenizer.h  strings.h  threadapi.h  urlencode.h  vector.h
c/common/src/: base64.c  buffer.c  certs.c  crt_abstractions.c  doublylinkedlist.c  gballoc.c  hmac.c  hmacsha256.c  httpapiex.c  httpapiexsas.c  httpheaders.c  makefile  map.c  sastoken.c  sha1.c  sha224.c  sha384-512.c  string_tokenizer.c  strings.c  urlencode.c  usha.c  vector.c
c/common/tests/: CMakeLists.txt  makefile.linux
c/common/testtools/: CMakeLists.txt
c/configs/: azure_iot_sdksConfig.cmake  azure_iot_sdksFunctions.cmake
c/doc/: Linux-Almach-C.md  SDK_cross_compile_example.md  SDK_cross_compile_example_android.md  devbox_setup.md  device_setup_beagleboneblack.md  device_setup_beaglebonegreen.md  device_setup_raspberrypi2_rasbian.md  porting_guide.md  provision_device.md  run_arduino.md  run_end_to_end_tests.md  run_sample_on_almach_yocto.md  run_sample_on_ankaa_ubuntu12_04.md  run_sample_on_arduino.md  run_sample_on_arduino_wifi101.md  run_sample_on_arduino_yun.md  run_sample_on_beaglebone_black.md  run_sample_on_beaglebone_black_debian.md  run_sample_on_beaglebone_black_snappy.md  run_sample_on_beaglebone_green.md  run_sample_on_desktop_linux.md  run_sample_on_desktop_windows.md  run_sample_on_freescale_k64f_mbed.md  run_sample_on_intel_edison.md  run_sample_on_raspberrypi2_rasbian.md  run_sample_on_raspberrypi2_raspbian.md  run_sample_on_ti_cc3200.md  run_sample_on_toradex_wec2013.md  run_sample_opensuse.md  run_sample_ti_cc3200.md  ubuntu_apt-get_sample_setup.md
c/doc/api_reference/: agenttime_8h.html  agenttime_8h_source.html  annotated.html  base64_8h.html  dir_12d2b36f129c41023f7f4a6bff2578c5.html  dir_3fa79a50e591a13d34768ad07721929e.html  dir_72aec881c4ddd8f448eae7bd490815ae.html  dir_cdcbff5a6a1122bd9bb23b5044523779.html  dir_e7e6b493d3d7754f3ea1acccc5db86e9.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  httpapi_8h.html  httpapi_8h_source.html  httpapiex_8h_source.html  (+9 more)
c/iotdm_client/: CMakeLists.txt  README
c/iothub_client/: CMakeLists.txt  readme.txt
c/iothub_service_client/: CMakeLists.txt
c/serializer/: CMakeLists.txt  readme.txt
c/service/: CMakeLists.txt
c/testtools/: CMakeLists.txt
c/tools/: CMakeLists.txt
(+4577 files in other folders)
